--- a/index.html
+++ b/index.html
@@ -8,30 +8,71 @@
     <title>BellySoul</title>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-          <div class="col">
-            1 of 3
+    <div class="container" style="width: 100%; height: 100%;">
+
+        <div class="row" >
+          <div class="col-3" style="background-color: red">
+            <img src="galeria/logo.png" alt="logo do site" style="width: 20%; height: 100%; position: relative; left: 70px;">
+            <img src="galeria/BellySoul.png" alt="título do site" style="width: 20%; height: 100%; position: relative; left: 63px;">
           </div>
-          <div class="col-6">
-            2 of 3 (wider)
+          <div class="col-6" style="background-color: blue" >
+            <h1 style="text-align: center;">SAÚDE FÍSICA E MENTAL</h1>
           </div>
-          <div class="col">
-            3 of 3
+          <div class="col-3" style="background-color: yellow" >
+            <button type="button" class="btn btn-primary btn-lg btn-block" 
+            style="position: relative; left: 30px; top: 5px;">Agende sua consulta</button>
           </div>
         </div>
+
         <div class="row">
-          <div class="col">
+          <div class="col-8" style="background-color: green">
             1 of 3
+
+            <div class="row">
+              <div class="col-6" style="background-color: gray">
+                2 of 3 (wider)
+              </div>
+              <div class="col-6" style="background-color: black">
+                2 of 3 (wider)
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-12" style="background-color: purple">
+                oioi
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-6" style="background-color: brown">
+                2 of 3 (wider)
+              </div>
+              <div class="col-6" style="background-color: red">
+                2 of 3 (wider)
+              </div>
+            </div>
+
           </div>
-          <div class="col-5">
+          <div class="col-4" style="background-color: rgba(255, 255, 0, 0.445)">
             2 of 3 (wider)
           </div>
-          <div class="col">
-            3 of 3
+        </div>
+
+        <div class="row">
+          <div class="col-3" style="background-color:blue">
+            1 of 3
+          </div>
+          <div class="col-3" style="background-color: green">
+            2 of 3 (wider)
+          </div>
+          <div class="col-3" style="background-color: gray">
+            1 of 3
+          </div>
+          <div class="col-3" style="background-color: black">
+            2 of 3 (wider)
           </div>
         </div>
       </div>
-    
+    </div>
 </body>
 </html>
