--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <h1 style="text-align: center;">SAÚDE FÍSICA E MENTAL</h1>
           </div>
           <div class="col-3" style="background-color: yellow" >
-            <button type="button" class="btn btn-primary btn-lg btn-block" 
-            style="position: relative; left: 30px; top: 5px;">Agende sua consulta</button>
+            <button type="button" class="btn btn-success" style="position: relative; left: 50px; top: 8px;">Agende sua consulta</button>
           </div>
         </div>
 
