--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>BellySoul</title>
 </head>
 <body>
@@ -19,26 +20,51 @@
             <h1 style="text-align: center;">SAÚDE FÍSICA E MENTAL</h1>
           </div>
           <div class="col-3" style="background-color: yellow" >
-            <button type="button" class="btn btn-success" style="position: relative; left: 50px; top: 8px;">Agende sua consulta</button>
+            <button type="button" class="btn btn-success" style="position: relative; left: 40px; 
+            top: 8px; width: 75%; height: 75%;">Agende sua consulta</button>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-8" style="background-color: green">
-            1 of 3
+          <div class="col-9" style="background-color: green">
+            <h3>Dietas para cuidar do próprio corpo e saúde</h3>
+            <div class="row">
+              <div class="col-8" style="background-color: green">
+                <img src="galeria/alimentos.png" alt="comida" style="width: 150%; height: 100%; position: relative; bottom: 6px;">
+              </div>
+            </div>
 
             <div class="row">
               <div class="col-6" style="background-color: gray">
-                2 of 3 (wider)
+                <h4>Como criar uma dieta</h4>
+                <p>A dieta nada mais é do que um novo plano alimentar, com nutrientes necessários para o bem-estar e aliada a hábitos saudáveis. 
+                  Embora muita gente opte por fazer dieta somente quando quer perder peso, essa prática pode trazer diversos benefícios para a 
+                  saúde e para o corpo. "Fazer dieta é sinal de cuidado. Você precisa saber diferenciar o que te faz bem, pois é preciso sair da 
+                  zona de conforto. Mudar o paladar, se alimentar bem, aumentar o consumo de líquidos, evitar 
+                  alimentos que inflam...", analisa a nutricionista Carolina Baliere, que indicou principais dicas para o início do novo plano 
+                  alimentar.</p>
               </div>
               <div class="col-6" style="background-color: black">
-                2 of 3 (wider)
+                <h4>Alimentos a privilegiar</h4>
+                <p>
+                  -Frutas <br>
+                  -Proteínas <br>
+                  -Verduras e hortaliças
+                </p>
+                <h4>Observação</h4>
+                <p>Durma bem. Uma boa noite dse sono é fundamental para manter em equilíbrio os hormônios que regulam o peso.
+                  Uma das principais ações para uma dieta equilibrada e bem sucedida é evitar alimentos industrializados. 
+                </p>
               </div>
             </div>
 
             <div class="row">
               <div class="col-12" style="background-color: purple">
-                oioi
+                <video poster="demo.jpg">
+                  <video src="video/demo.mp4" type="video/mp4">
+                  <video src="video/demo.webm" type="video/webm">
+                  <video src="video/demo.ogv" type="video/ogg">
+                </video>
               </div>
             </div>
 
@@ -52,7 +78,7 @@
             </div>
 
           </div>
-          <div class="col-4" style="background-color: rgba(255, 255, 0, 0.445)">
+          <div class="col-3" style="background-color: rgba(255, 255, 0, 0.445)">
             2 of 3 (wider)
           </div>
         </div>
