--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3>Dietas para cuidar do próprio corpo e saúde</h3>
             <div class="row">
               <div class="col-8" style="background-color: green">
-                <img src="galeria/alimentos.png" alt="comida" style="width: 150%; height: 100%; position: relative; bottom: 6px;">
+                <img src="galeria/alimento.jpg" alt="comida" style="width: 820px; height: 300px; position: relative; bottom: 6px;">
               </div>
             </div>
 
@@ -60,11 +60,7 @@
 
             <div class="row">
               <div class="col-12" style="background-color: purple">
-                <video poster="demo.jpg">
-                  <video src="video/demo.mp4" type="video/mp4">
-                  <video src="video/demo.webm" type="video/webm">
-                  <video src="video/demo.ogv" type="video/ogg">
-                </video>
+                <video src="video.mp4"></video>
               </div>
             </div>
 
