--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 
             <div class="row">
               <div class="col-12" style="background-color: purple">
-                <video src="video.mp4"></video>
+                <img src="galeria/alimento.jpg" alt="">
               </div>
             </div>
 
             <div class="row">
               <div class="col-6" style="background-color: brown">
-                2 of 3 (wider)
+                <img src="ccoraçao (1) (1).png" alt="grafico 1" style="width: 400px; height: 400px; ">
               </div>
               <div class="col-6" style="background-color: red">
                 2 of 3 (wider)
