--- a/index.html
+++ b/index.html
@@ -8,44 +8,48 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <title>BellySoul</title>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+    </style>
 </head>
 <body>
     <div class="container" style="width: 100%; height: 100%;">
 
         <div class="row" >
-          <div class="col-3" style="background-color: red">
+          <div class="col-3" style="background-color: #848C46">
             <img src="galeria/logo.png" alt="logo do site" style="width: 20%; height: 100%; position: relative; left: 70px;">
             <img src="galeria/BellySoul.png" alt="título do site" style="width: 20%; height: 100%; position: relative; left: 63px;">
           </div>
-          <div class="col-6" style="background-color: blue" >
-            <h1 style="text-align: center;">SAÚDE FÍSICA E MENTAL</h1>
+          <div class="col-6" style="background-color: #848C46" >
+            <h1 style="text-align: center; color: #045f1b; font-family: 'Varela Round', sans-serif;">SAÚDE FÍSICA E MENTAL</h1>
           </div>
-          <div class="col-3" style="background-color: yellow" >
+          <div class="col-3" style="background-color: #848C46" >
             <button type="button" class="btn btn-success" style="position: relative; left: 40px; 
             top: 8px; width: 75%; height: 75%;">Agende sua consulta</button>
           </div>
         </div>
 
         <div class="row">
-          <div class="col-9" style="background-color: green">
-            <h3>Dietas para cuidar do próprio corpo e saúde</h3>
+          <div class="col-9" >
+            <h3 style="font-family: 'Varela Round', sans-serif;;">Dietas para cuidar do próprio corpo e saúde</h3>
             <div class="row">
-              <div class="col-8" style="background-color: green">
+              <div class="col-8" >
                 <img src="galeria/alimento.jpg" alt="comida" style="width: 820px; height: 300px; position: relative; bottom: 6px;">
               </div>
             </div>
 
             <div class="row">
-              <div class="col-6" style="background-color: gray">
+              <div class="col-6" >
                 <h4>Como criar uma dieta</h4>
-                <p>A dieta nada mais é do que um novo plano alimentar, com nutrientes necessários para o bem-estar e aliada a hábitos saudáveis. 
+                <p style="text-align: justify;">A dieta nada mais é do que um novo plano alimentar, com nutrientes necessários para o bem-estar e aliada a hábitos saudáveis. 
                   Embora muita gente opte por fazer dieta somente quando quer perder peso, essa prática pode trazer diversos benefícios para a 
                   saúde e para o corpo. "Fazer dieta é sinal de cuidado. Você precisa saber diferenciar o que te faz bem, pois é preciso sair da 
                   zona de conforto. Mudar o paladar, se alimentar bem, aumentar o consumo de líquidos, evitar 
                   alimentos que inflam...", analisa a nutricionista Carolina Baliere, que indicou principais dicas para o início do novo plano 
                   alimentar.</p>
               </div>
-              <div class="col-6" style="background-color: black">
+              <div class="col-6" >
                 <h4>Alimentos a privilegiar</h4>
                 <p>
                   -Frutas <br>
@@ -53,14 +57,14 @@
                   -Verduras e hortaliças
                 </p>
                 <h4>Observação</h4>
-                <p>Durma bem. Uma boa noite dse sono é fundamental para manter em equilíbrio os hormônios que regulam o peso.
+                <p tyle="text-align: justify;">Durma bem. Uma boa noite dse sono é fundamental para manter em equilíbrio os hormônios que regulam o peso.
                   Uma das principais ações para uma dieta equilibrada e bem sucedida é evitar alimentos industrializados. 
                 </p>
               </div>
             </div>
 
             <div class="row">
-              <div class="col-12" style="background-color: purple">
+              <div class="col-12" >
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/RTB9FK5Bs2A" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen style="position: relative; left: 200px; top: 2px;"></iframe>
@@ -68,32 +72,37 @@
             </div>
 
             <div class="row">
-              <div class="col-6" style="background-color: brown">
-                <img src="ccoraçao (1) (1).png" alt="grafico 1" style="width: 400px; height: 400px; ">
+              <div class="col-6" ">
+                <h5 style="text-align: center;">Quantas vezes por dia você come
+                  fruta?</h5>
+                <img src="galeria/graf1.png" alt="grafico 1" style="width: 400px; height: 400px; ">
               </div>
-              <div class="col-6" style="background-color: red">
-                2 of 3 (wider)
+              <div class="col-6" ">
+                <h5 style="text-align: center;">Principais mortes por doenças não
+                  comunicáveis em 2012</h5>
+                <img src="galeria/graf2.png" alt="grafico 2" style="width: 400px; height: 400px;">
               </div>
             </div>
 
           </div>
-          <div class="col-3" style="background-color: rgba(255, 255, 0, 0.445)">
-            2 of 3 (wider)
+          <div class="col-3" >
+            <img src="galeria/ad.png" alt="anúncio" style="width: 100%; height: 100%;">
           </div>
         </div>
 
         <div class="row">
-          <div class="col-3" style="background-color:blue">
-            1 of 3
+          <div class="col-3" style="background-color:#848C46">
+            <button type="button" class="btn btn-success" style="position: relative; left: 100px; 
+            top: 13px; ">Sobre nós</button>
           </div>
-          <div class="col-3" style="background-color: green">
-            2 of 3 (wider)
+          <div class="col-3" style="background-color: #848C46">
+            <h5 style="text-align: center; position: relative; top: 21px; ">bianca.nutrigmail.com</h5>
           </div>
-          <div class="col-3" style="background-color: gray">
-            1 of 3
+          <div class="col-3" style="background-color: #848C46">
+            <img src="galeria/social.png" alt="redes" style="width: 100%; height: 100%;">
           </div>
-          <div class="col-3" style="background-color: black">
-            2 of 3 (wider)
+          <div class="col-3" style="background-color: #848C46">
+            <h5 style="text-align: center; position: relative; top: 21px; ">+55 997368754</h5>
           </div>
         </div>
       </div>
