--- a/index.html
+++ b/index.html
@@ -14,32 +14,33 @@
     </style>
 </head>
 <body>
-    <div class="container" style="width: 100%; height: 100%;">
+    <div class="container">
 
-        <div class="row" >
+        <div class="row">
           <div class="col-3" style="background-color: #848C46">
             <img src="galeria/logo.png" alt="logo do site" style="width: 20%; height: 100%; position: relative; left: 70px;">
             <img src="galeria/BellySoul.png" alt="título do site" style="width: 20%; height: 100%; position: relative; left: 63px;">
           </div>
           <div class="col-6" style="background-color: #848C46" >
-            <h1 style="text-align: center; color: #045f1b; font-family: 'Varela Round', sans-serif;">SAÚDE FÍSICA E MENTAL</h1>
+            <h1 style="text-align: center; color: #045f1b; font-family: 'Varela Round', sans-serif; position: relative; top: 10px;">SAÚDE FÍSICA E MENTAL</h1>
           </div>
           <div class="col-3" style="background-color: #848C46" >
+            <a href="teste.html">
             <button type="button" class="btn btn-success" style="position: relative; left: 40px; 
-            top: 8px; width: 75%; height: 75%;">Agende sua consulta</button>
+            top: 8px; width: 75%; height: 75%;" >Agende sua consulta</button> </a>
           </div>
         </div>
 
         <div class="row">
           <div class="col-9" >
-            <h3 style="font-family: 'Varela Round', sans-serif;;">Dietas para cuidar do próprio corpo e saúde</h3>
+            <h3 style="font-family: 'Varela Round', sans-serif; position: relative; top: 10px;">Dietas para cuidar do próprio corpo e saúde </h3>
             <div class="row">
               <div class="col-8" >
-                <img src="galeria/alimento.jpg" alt="comida" style="width: 820px; height: 300px; position: relative; bottom: 6px;">
+                <img src="galeria/alimento.jpg" alt="comida" style="width: 820px; height: 300px; position: relative; top: 10px;">
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="position: relative; top: 20px;">
               <div class="col-6" >
                 <h4>Como criar uma dieta</h4>
                 <p style="text-align: justify;">A dieta nada mais é do que um novo plano alimentar, com nutrientes necessários para o bem-estar e aliada a hábitos saudáveis. 
@@ -63,7 +64,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="position: relative; top:15px;">
               <div class="col-12" >
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/RTB9FK5Bs2A" title="YouTube video player" 
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -71,7 +72,7 @@
               </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="position: relative; top:20px;">
               <div class="col-6" ">
                 <h5 style="text-align: center;">Quantas vezes por dia você come
                   fruta?</h5>
@@ -86,7 +87,7 @@
 
           </div>
           <div class="col-3" >
-            <img src="galeria/ad.png" alt="anúncio" style="width: 100%; height: 100%;">
+            <img src="galeria/ad.png" alt="anúncio" style="width: 99%; height: 99%; margin: 10px;">
           </div>
         </div>
 
@@ -99,7 +100,9 @@
             <h5 style="text-align: center; position: relative; top: 21px; ">bianca.nutrigmail.com</h5>
           </div>
           <div class="col-3" style="background-color: #848C46">
-            <img src="galeria/social.png" alt="redes" style="width: 100%; height: 100%;">
+            <img src="face_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
+            <img src="Instagram_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
+            <img src="zap_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
           </div>
           <div class="col-3" style="background-color: #848C46">
             <h5 style="text-align: center; position: relative; top: 21px; ">+55 997368754</h5>
