--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
 
         <div class="row">
           <div class="col-3" style="background-color: #848C46">
+            <a href="index.html">
             <img src="galeria/logo.png" alt="logo do site" style="width: 20%; height: 100%; position: relative; left: 70px;">
             <img src="galeria/BellySoul.png" alt="título do site" style="width: 20%; height: 100%; position: relative; left: 63px;">
+            </a>
           </div>
           <div class="col-6" style="background-color: #848C46" >
             <h1 style="text-align: center; color: #045f1b; font-family: 'Varela Round', sans-serif; position: relative; top: 10px;">SAÚDE FÍSICA E MENTAL</h1>
           </div>
           <div class="col-3" style="background-color: #848C46" >
-            <a href="teste.html">
+            <a href="formulário.html">
             <button type="button" class="btn btn-success" style="position: relative; left: 40px; 
             top: 8px; width: 75%; height: 75%;" >Agende sua consulta</button> </a>
           </div>
@@ -100,9 +102,9 @@
             <h5 style="text-align: center; position: relative; top: 21px; ">bianca.nutrigmail.com</h5>
           </div>
           <div class="col-3" style="background-color: #848C46">
-            <img src="face_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
-            <img src="Instagram_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
-            <img src="zap_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
+            <img src="galeria/face_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
+            <img src="galeria/Instagram_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
+            <img src="galeria/zap_icon.png" alt="redes" style="width: 45px; height: 45px; margin: 5px;">
           </div>
           <div class="col-3" style="background-color: #848C46">
             <h5 style="text-align: center; position: relative; top: 21px; ">+55 997368754</h5>
