--- a/enviado.html
+++ b/enviado.html
@@ -60,10 +60,9 @@
                   Coloque aqui mais informações 
                   </textarea>
               </fieldset>
-              <a href="enviado.html">
               <button type="button" class="btn btn-success" style="position: relative;  
             top: 10px; ">Enviar</button>
-            </a>
+            <p style="position: relative; top: 20px;">Enviado!</p>
           </form>
           </div>
           <div class="col-3" >
