--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                   -Verduras e hortaliças
                 </p>
                 <h4>Observação</h4>
-                <p tyle="text-align: justify;">Durma bem. Uma boa noite dse sono é fundamental para manter em equilíbrio os hormônios que regulam o peso.
+                <p tyle="text-align: justify;">Durma bem. Uma boa noite dse sono é fundamental para manter em equilíbrio os hormônios 
+                  que regulam o peso.
                   Uma das principais ações para uma dieta equilibrada e bem sucedida é evitar alimentos industrializados. 
                 </p>
               </div>
